crates/flui_types/tests/compile_fail/mixed_rect_ops.stderr
warning: unused import: `Size`
 --> tests/compile_fail/mixed_rect_ops.rs:5:63
  |
5 | use flui_types::geometry::{Pixels, DevicePixels, Rect, Point, Size};
  |                                                               ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
  --> tests/compile_fail/mixed_rect_ops.rs:19:48
   |
19 |     let _intersection = rect_logical.intersect(&rect_device);
   |                                      --------- ^^^^^^^^^^^^ expected `&Rect<Pixels>`, found `&Rect<DevicePixels>`
   |                                      |
   |                                      arguments to this method are incorrect
   |
   = note: expected reference `&Rect<flui_types::Pixels>`
              found reference `&Rect<DevicePixels>`
note: method defined here
  --> src/geometry/rect.rs
   |
   |     pub fn intersect(&self, other: &Self) -> Option<Self> {
   |            ^^^^^^^^^
